--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ db.sqlite3
 tasks.db*
 ./vulnwhisperer/data/openvas/*.json
 /media
+/sicupira/migrations
 
 # Created by https://www.gitignore.io/api/visualstudiocode
 # Edit at https://www.gitignore.io/?templates=visualstudiocode
