--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ tasks.db*
 ./vulnwhisperer/data/openvas/*.json
 /media
 /sicupira/migrations
+/pessoa/migrations
 
 # Created by https://www.gitignore.io/api/visualstudiocode
 # Edit at https://www.gitignore.io/?templates=visualstudiocode
